--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link rel='shortcut icon' href='favicon.png' type='image/png'>
 	<link rel="stylesheet" type="text/css" href="game.css">
-	<script type="text/javascript" src="game.js"></script>
+	<script type="text/javascript" src="ludo.js"></script>
 </head>
 <body onload="initial()">
 	<div class="logo">
