--- a/index.html
+++ b/index.html
@@ -18,59 +18,59 @@
 	<br>
 	<div class="wrapper">
 		<div class="first">
-			<div id="1" class="block" style="background-color: #66b3ff" onclick="isMovable(1)">
+			<div id="1" class="block" style="background-color: #66b3ff; background-image: none;" onclick="myFunction(1)">
 			</div>
-			<div id="2" class="block" onclick="isMovable(2)"></div>
-			<div id="3" class="block" onclick="isMovable(3)"></div>
-			<div id="4" class="block" onclick="isMovable(4)"></div>
-			<div id="5" class="block" onclick="isMovable(5)"></div>
-			<div id="6" class="block" onclick="isMovable(6)"></div>
-			<div id="7" class="block" onclick="isMovable(7)"></div>
-			<div id="8" class="block" onclick="isMovable(8)"></div>
+			<div id="2" class="block" onclick="myFunction(2)"></div>
+			<div id="3" class="block" onclick="myFunction(3)"></div>
+			<div id="4" class="block" onclick="myFunction(4)"></div>
+			<div id="5" class="block" onclick="myFunction(5)"></div>
+			<div id="6" class="block" onclick="myFunction(6)"></div>
+			<div id="7" class="block" onclick="myFunction(7)"></div>
+			<div id="8" class="block" onclick="myFunction(8)"></div>
 		</div>
 		<div class="mid">
-			<div class="block" id="0" onclick="isMovable(0)" style="background-color: rgba(102,179,255,0.5);"></div>
-			<div class="block" id="9" onclick="isMovable(9)" style="margin-left: 450px"></div>
+			<div class="block" id="0" onclick="myFunction(0)" style="background-color: rgba(102,179,255,0.5); background-image: none;"></div>
+			<div class="block" id="9" onclick="myFunction(9)" style="margin-left: 452px"></div>
 		</div>
 		<div class="mid">
-			<div class="block" id="27" onclick="isMovable(27)"></div>
-			<div class="block" id="10" onclick="isMovable(10)" style="margin-left: 450px"></div>
-		</div>
-		<div class="mid">
-			<div class="block" id="26" onclick="isMovable(26)"></div>
+			<div class="block" id="27" onclick="myFunction(27)"></div>
 			<div style="position: relative; left: 150px; width: 150px; text-align: center;">
 				<button class="roll" onclick="rollRand()">Roll!</button>
 				<div id="value"></div>
 				<div id="turns"></div>
 				<div id="terms"></div>	
-				<form class="checker" style="display: inline-flex; position: relative; right: 17.6px;">
-					<input type="number" name="dice" min="1" max="6" id="dice" autofocus>
+				<form class="checker">
+					<input type="number" name="dice" min="1" max="6" id="dice" style="border: none; padding: 4px"  autofocus>
   					<div onclick="check()" id="submit">Check</div>
 				</form>
 			</div>
-			<div class="block" id="11" onclick="isMovable(11)" style="margin-left: 300px"></div>
+			<div class="block" id="10" onclick="myFunction(10)" style="margin-left: 302px"></div>
 		</div>
 		<div class="mid">
-			<div class="block" id="25" onclick="isMovable(25)"></div>
-			<div class="block" id="12" onclick="isMovable(12)" style="margin-left: 450px"></div>
+			<div class="block" id="26" onclick="myFunction(26)"></div>
+			<div class="block" id="11" onclick="myFunction(11)" style="margin-left: 452px"></div>
 		</div>
 		<div class="mid">
-			<div class="block" id="24" onclick="isMovable(24)"></div>
-			<div class="block" id="13" onclick="isMovable(13)" style="margin-left: 450px"></div>
+			<div class="block" id="25" onclick="myFunction(25)"></div>
+			<div class="block" id="12" onclick="myFunction(12)" style="margin-left: 452px"></div>
 		</div>
 		<div class="mid">
-			<div class="block" id="23" onclick="isMovable(23)"></div>
-			<div class="block" id="14" onclick="isMovable(14)" style="background-color: rgba(216,50,48,0.7); margin-left: 450px"></div>
+			<div class="block" id="24" onclick="myFunction(24)"></div>
+			<div class="block" id="13" onclick="myFunction(13)" style="margin-left: 452px"></div>
+		</div>
+		<div class="mid">
+			<div class="block" id="23" onclick="myFunction(23)"></div>
+			<div class="block" id="14" onclick="myFunction(14)" style="background-color: rgba(216,50,48,0.7); margin-left: 452px; background-image: none;"></div>
 		</div>
 		<div class="first">
-			<div class="block" id="22" onclick="isMovable(22)"></div>
-			<div class="block" id="21" onclick="isMovable(21)"></div>
-			<div class="block" id="20" onclick="isMovable(20)"></div>
-			<div class="block" id="19" onclick="isMovable(19)"></div>
-			<div class="block" id="18" onclick="isMovable(18)"></div>
-			<div class="block" id="17" onclick="isMovable(17)"></div>
-			<div class="block" id="16" onclick="isMovable(16)"></div>
-			<div class="block" id="15" style="background-color: #d83230" onclick="isMovable(15)"></div>
+			<div class="block" id="22" onclick="myFunction(22)"></div>
+			<div class="block" id="21" onclick="myFunction(21)"></div>
+			<div class="block" id="20" onclick="myFunction(20)"></div>
+			<div class="block" id="19" onclick="myFunction(19)"></div>
+			<div class="block" id="18" onclick="myFunction(18)"></div>
+			<div class="block" id="17" onclick="myFunction(17)"></div>
+			<div class="block" id="16" onclick="myFunction(16)"></div>
+			<div class="block" id="15" style="background-color: #d83230; background-image: none;" onclick="myFunction(15)"></div>
 		</div>
 	</div>
 	<p><br></p>
