--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<div style="position: relative; left: 150px; width: 150px; text-align: center;">
 				<button class="roll" onclick="rollRand()">Roll!</button>
 				<div id="value"></div>
+				<div id="gif"></div>
 				<div id="turns"></div>
 				<div id="terms"></div>	
 				<form class="checker">
