--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 <body onload="initial()">
 	<div style="text-align: center;">
 		<div id="welcome">
-			<div id="welcome_header"><img src="favicon.png" width="98%"></div>
-			<p style="position: relative; bottom: 34.3%; font-size: 203%">Welcome to Ludo King!!!</p>
-			<div id="instruction_header" onclick="welcome()" style="cursor: pointer; width: 33.33%; position: relative; bottom: 24.5%; left: 33.3%"><h2 style="margin: 0px">Continue</h2></div>
+			<div id="welcome_header"><img src="favicon.png" width="100px"></div>
+			<h1 style="position: relative; bottom: 70px">Welcome to Ludo King!!!</h1>
+			<div id="instruction_header" onclick="welcome()" style="cursor: pointer; width: 140px; position: relative; bottom: 50px; left: 140px"><h2 style="margin: 0px">Continue</h2></div>
 		</div>
 
 		<div id="instruction">
 			<div id="instruction_header"><h1>INSTRUCTIONS</h1></div>
 			<img src="instruction.gif" style="position: relative; bottom: 90px">
-			<div style="text-align: left; font-size: 30px; padding-left: 30px; position: relative; bottom: 104.17%">
+			<div style="text-align: left; font-size: 30px; padding-left: 30px; position: relative; bottom: 400px">
 				<ul>
 					<li><strong>This is an automatised Ludo Game</strong></li>
 					<li><strong>There are two players</strong></li>
 					<li><strong>There are two tokens for each player</strong></li>
 				</ul>
 			</div>
-			<div id="instruction_header" onclick="instr()" style="cursor: pointer; width: 23%; position: relative; bottom: 104.17%; left: 36.1%"><h2 style="margin: 0px">Continue</h2></div>
+			<div id="instruction_header" onclick="instr()" style="cursor: pointer; width: 140px; position: relative; bottom: 400px; left: 220px"><h2 style="margin: 0px">Continue</h2></div>
 		</div>
 
 		<div id="win">
